--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Frontend Masters React</title>
+    <title>React</title>
   </head>
   <body>
-    <div id="app">React has not yet rendered</div>
+    <div id="app"></div>
     <script src="public/bundle.js"></script>
   </body>
 </html>
